--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
+<!-- dev environment by Nathan Quick -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World!</title>
-    <h1>Hello World!?</h1>
 </head>
 <body>
+<h1>Hello World!</h1>
+<script src="bundle.js"></script>
 
 </body>
 </html>
